--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=EUC-KR">
 
-<title>회원가입</title>
+<title>로그인</title>
 
 </head>
 
@@ -16,23 +16,17 @@
 
  <center>
 
-   <h3>회원가입</h3>
+   <h3>로그인</h3>
     <form method="POST" action="">
       <table cellpadding="5" cellspacing="0"
             bgcolor="eeeeee">
         <tr>
           <td>ID:</td>
-          <td><input type="text" name="login_id">
-              <input type="button" name="duplcate_check" value="중복확인">
-          </td>
+          <td><input type="text" name="login_id"></td>
         </tr>
         <tr>
           <td>비 번:</td>
           <td><input type="password" name="password"> </td>
-        </tr>
-        <tr>
-          <td>비번확인:</td>
-          <td><input type="password" name="password_re"> </td>
         </tr>
       </table>
       <input type="submit" value="제출"/>
