feat: Add group function

--- a/views/room_list.ejs
+++ b/views/room_list.ejs
@@ -21,6 +21,9 @@
 			<%-lists%>
 		</ul>
    </div>
+   <div>
+		<button><a href="/make_room">new room</a></button>
+   </div>
  </center>
  <script src="http://code.jquery.com/jquery-1.11.1.js"></script>
 
